# starfighter-game

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/gamelib/ecs/: __init__.py  collision.py  custom.py  geometry.py  player.py  probe.py  rendering.py  timer.py  utils.py
src/gamelib/ecs/modifiers/: modifier.py  speed_modifier.py
src/gamelib/mgmt/: __init__.py  game_event.py  game_mixer.py  scene_base.py
src/starfighter_game/: asteroid.py  game_events.py  player.py  powerup.py  projectile.py  scenes.py  sound.py  starfighter_player.py
