[project]
name = "starfighter-game"
version = "0.1.0"
description = ""
authors = [
    {name = "welc0186",email = "49768046+welc0186@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pygbag (>=0.9.2,<0.10.0)",
    "esper (>=3.4,<4.0)",
    "gamelib @ file:///F:/pygame/gamelib",
    "psygnal (>=0.15.0,<0.16.0)"
]

[tool.poetry]
packages = [{include = "starfighter_game", from = "src"}]


[tool.poetry.dependencies]
gamelib = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
